--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="col-2">
                 <h4>link search</h4>
             </div>
-            <div class="col-8 displayvideo">
+            <div class="col-8 displayvideo" id="player">
                 <h4>Video Dispaly</h4>
             </div>
             <div class="col-2">
@@ -107,6 +107,7 @@
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+    <script src="assets/js/player.js"></script>
 </body>
 
 </html>
