--- a/kamal_contact_index.html
+++ b/kamal_contact_index.html
@@ -59,7 +59,7 @@
                         <p>Columbia University</p>
                         <p>116th St & Broadway</p>
                         <p>New York, NY 10027</p>
-                        <p>Email: abmk@gmail.com</p>
+                        <p>Email: abmkcs@gmail.com</p>
                         <p>Phone: 212-555-1234</p>
                     </div>
                 </div>
