--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             </div>
             <div class="col-8 displayvideo" id="player">
                 <h4>Video Dispaly</h4>
+                
             </div>
             <div class="col-2">
                 <h4> user login</h4>
@@ -100,14 +101,20 @@
     </div>
     <!-- footer -->
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" -->
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-        <script
-        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="assets/js/player.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- Google API -->
+    <script src="https://apis.google.com/js/api.js"></script>    
+    <!-- <script src="assets/js/player.js"></script> -->
+    <script src="assets/js/search.js"></script>
+
+
 </body>
 
 </html>
