--- a/kamal_news_portal.html
+++ b/kamal_news_portal.html
@@ -4,7 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>News Portal</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
+
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+  <!-- style sheets -->
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+
+  <!-- style needed for this page -->
   <style>
     img {
       height: 40px;
@@ -18,26 +25,61 @@
       width: 400px;
       margin: 10px 10px;
     }
+    h2 {
+      font-size: 24px;
+      line-height: 30px;
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 5px;
+    }
+    .bold-font,
+    #searchTerm,
+    #add-search-btn {
+      display: inline-block;      
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 16px;
+      line-height: 24px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }    
+    .search-row {      
+      margin: auto;
+      vertical-align: center;
+      border: 1px solid black;
+      margin-bottom: 10px;
+      padding: 0 10px 0 10px;
+
+    }
   </style>
 </head>
 
 <body>
   <div class="container">
+    <!-- search bar-->
     <h2>News Search Portal</h2>
-    <div class="row">
-      <label for="userName-input" class="bold-font">What are you looking for?</label>
-      <input class="form-control" id="searchTerm" placeholder="" type="text">
-      <button class="btn btn-primary float-left" id="add-search-btn">SEARCH</button>
+    <div class="row" id="search-bar">
+      <table class="search-row">
+        <td><label for="userName-input" class="bold-font">What are you looking for?</label></td>
+        <td><input class="form-control " id="searchTerm" placeholder="" type="text"></td>
+        <td><button class="btn btn-info" id="add-search-btn">SEARCH</button></td>
+      </table>
     </div>
-    <button class="btn btn-primary float-left" id="add-liberal-btn">LIBERAL</button>
-    <button class="btn btn-primary float-left" id="add-msnbc-btn">MSNBC</button>
-    <button class="btn btn-primary float-left" id="add-cnn-btn">CNN</button>
-    <button class="btn btn-primary float-left" id="add-washington-btn">THE WASHINGTON POST</button>
-    <button class="btn btn-primary float-left" id="add-conservative-btn">CONSERVATIVE</button>
-    <button class="btn btn-primary float-left" id="add-foxnews-btn">FOX NEWS</button>
-    <button class="btn btn-primary float-left" id="add-national-btn">NATIONAL REVIEW</button>
-    <button class="btn btn-primary float-left" id="add-breitbart-btn">BREITBART NEWS</button>
-
+    <!-- button section-->
+    <div class="row">
+      <div class="col-md-5">
+        <button class="btn btn-primary float-left" id="add-liberal-btn">LIBERAL</button>
+        <button class="btn btn-primary float-left" id="add-msnbc-btn">MSNBC</button>
+        <button class="btn btn-primary float-left" id="add-cnn-btn">CNN</button>
+        <button class="btn btn-primary float-left" id="add-washington-btn">THE WASHINGTON POST</button>
+      </div>
+      <div class="col-md-2"> </div> <!-- empty dev to separate left & right -->
+      <div class="col-md-5">
+        <button class="btn btn-danger float-right" id="add-conservative-btn">CONSERVATIVE</button>
+        <button class="btn btn-danger float-right" id="add-foxnews-btn">FOX NEWS</button>
+        <button class="btn btn-danger float-right" id="add-national-btn">NATIONAL REVIEW</button>
+        <button class="btn btn-danger float-right" id="add-breitbart-btn">BREITBART NEWS</button>
+      </div>
+    </div>
 
     <table class="table">
       <thead>
@@ -52,100 +94,20 @@
       </tbody>
     </table>
   </div>
+
+  <!-- bootstrap jquery-->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+
+  <!-- jquery library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript">
-    // News API testing by Kamal. Not part of the class
 
-    function runSearch() {
-      // this API is for "I want to search across every news article that mentions a specific topic or keyword (limited to the last 6 months)."
-      var searchTerm = $("#searchTerm").val().trim();
-      console.log( searchTerm);
-
-      for (var j = 1; j < 6; j++) {
-        var queryURL =
-          "https://newsapi.org/v2/everything?q=" + searchTerm + "&from=2019-03-01&sortBy=popularity?sources=cnn&apiKey=1f24541f63fa4ac79c46c7df37094bed&pageSize=100&page=" +
-          j.toString().trim();
-
-        $.ajax({
-          url: queryURL,
-          method: "GET"
-        }).then(function (response) {
-          console.log(response);
-          for (var i = 0; i < 99; i++) {
-            // make sure the media source we are looking for
-            var sourceName = response.articles[i].source.name.toUpperCase();
-
-            if ((sourceName === "CNN") || (sourceName === "FOX NEWS") || (sourceName === "THE WASHINGTON POST") ||
-              (
-                sourceName === "NATIONAL REVIEW") || (sourceName === "MSNBC") || (sourceName === "BREITBART NEWS")) {
-              // Create a new table row element
-              if (sourceName === "THE WASHINGTON POST") {
-                sourceName1 = "THE-WASHINGTON-POST";
-              } else {
-                sourceName1 = sourceName.replace(" ", "-");
-              }
-
-              var tRow = $("<tr class='" + sourceName1 + "'>");
-              var sourceID = $("<td>").html('<a href="' + response.articles[i].url + '" target="_blank">' + response.articles[i].source.name + '</a></td></tr>');
-              var summary = $("<td>").text(response.articles[i].description);
-
-              //var imgLink = $("<td>").html('<a href="' + response.articles[i].url  + '" target="_blank">'+ '<img src="' + response.articles[i].urlToImage + '"></a></td></tr>');
-              // var pageLink = $("<td>").html('<a href="' + response.articles[i].url + '" target="_blank">' + response.articles[i].title + '</a></td></tr>');
-
-              // Append the newly created table data to the table row
-              tRow.append(sourceID, summary);
-              // Append the table row to the table body
-              $("tbody").append(tRow);
-            }
-          }
-        });
-      }
-    }
-    // CNN Ends Here
-
-    // run search
-    
-    $("#add-search-btn").on("click", function () {
-      runSearch();
-    })
-
-    //  news hide when based on button clicked
-    // liberal media
-    $("#add-liberal-btn").on("click", function () {
-      $(".THE-WASHINGTON-POST, .MSNBC, .CNN").show();
-      $(".BREITBART-NEWS, .FOX-NEWS ,.NATIONAL-REVIEW").hide();
-    })
-    $("#add-msnbc-btn").on("click", function () {
-      $(".MSNBC").show();
-      $(".THE-WASHINGTON-POST, .NATIONAL-REVIEW, .BREITBART-NEWS, .CNN, .FOX-NEWS").hide();
-    })
-    $("#add-cnn-btn").on("click", function () {
-      $(".CNN").show();
-      $(".MSNBC, .THE-WASHINGTON-POST, .NATIONAL-REVIEW, .BREITBART-NEWS, .FOX-NEWS").hide();
-    })
-    $("#add-washington-btn").on("click", function () {
-      $(".THE-WASHINGTON-POST").show();
-      $(".MSNBC, .NATIONAL-REVIEW, .BREITBART-NEWS, .CNN, .FOX-NEWS").hide();
-    })
-
-    // consevative media    
-    $("#add-conservative-btn").on("click", function () {
-      $(".BREITBART-NEWS, .FOX-NEWS, .NATIONAL-REVIEW").show();
-      $(".THE-WASHINGTON-POST, .MSNBC, .CNN").hide();
-    })
-    $("#add-foxnews-btn").on("click", function () {
-      $(".FOX-NEWS").show();
-      $(".MSNBC, .THE-WASHINGTON-POST, .NATIONAL-REVIEW, .CNN, .BREITBART-NEWS").hide();
-    })
-    $("#add-national-btn").on("click", function () {
-      $(".NATIONAL-REVIEW").show();
-      $(".MSNBC, .THE-WASHINGTON-POST, .BREITBART-NEWS, .CNN, .FOX-NEWS").hide();
-    })
-    $("#add-breitbart-btn").on("click", function () {
-      $(".BREITBART-NEWS").show();
-      $(".MSNBC, .THE-WASHINGTON-POST, .NATIONAL-REVIEW, .CNN, .FOX-NEWS").hide();
-    })
-  </script>
+  <!-- javascript -->
+  <script src="assets/javascript/kamal_newsportal_app.js"></script>
 </body>
 
 </html>
